# fileexpect

./: .coveragerc  .gitignore  README.md  pyproject.toml
pytest_fileexpect/: FileBasedComparer.py  TextComparer.py  __init__.py
tests/: test_basics_and_text.py
tests/data/: file_with_random_elements.txt
