[tool.poetry]
name = "pytest-fileexpect"
version = "0.0.0"
description = "Tool to compare test results against file content"
authors = ["François Trahan <francois.trahan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
pytest = "^4.3"
pytest-coverage = "^0.0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
